clang/test/BSC/Negative/Trait/r3/member_func_for_trait/member_func_for_trait.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait F {
  int foo(This* this, int a);
};

_Trait F::getA(); // expected-error {{unsupported global scope specifier '::'}}
// expected-error@-1 {{only _Trait pointer type is allowed to be declared}}